--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <title>Tracks</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../../owner/bootstrap-3.1.1-dist/bootstrap-3.1.1-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap-3.1.1-dist/bootstrap-3.1.1-dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="starter-template.css" rel="stylesheet">
@@ -42,7 +42,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="bootstrap_test.html">Downbeat</a></li>
+            <li><a href="tracks.html">Downbeat</a></li>
             <li class="active"><a href="#about">About</a></li>
             <li><a href="#contact">Support</a></li>
             <li><a href="#signout">Sign out</a></li>
@@ -71,6 +71,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="../../owner/bootstrap-3.1.1-dist/bootstrap-3.1.1-dist/js/bootstrap.min.js"></script>
+    <script src="bootstrap-3.1.1-dist/bootstrap-3.1.1-dist/js/bootstrap.min.js"></script>
   </body>
 </html>
